@@ -12,3 +12,4 @@ New internal features:
 - #1169 Add revised Italian translation for CPSGeo
 - Remove all server side printing related stuffs. We'll handle the
 print browser side.
+- CPSGeo.permissions declares specific CPSGeo permissions
